# electricity_data_analyst

./: CLOSE  README.md  analyst.py  analyst.spec  pyproject.toml  run_analyst.bat  run_analyst.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/: EcometKulutus-2024-karkauspva-poistettu.xlsx  EcometKulutus-2025.xlsx  Fingrid-consumption-15min-year2024-23_02_2026.csv  Fingrid-consumption-1h-year2018-23_02_2026.csv.xlsx  Lapinlahdenkoneistus-kulutus2024JA2025-karkauspv-poistettu.xlsx  Vare-15min-year2024-csv-file-version-23_02_2026.csv  Vare-1h-year2024-csv-file-version-23_02_2026.csv  Vare-1h-year2024-xls-file-version-23_02_2026.xlsx
